# sbpf-linker

./: .gitignore  Cargo.toml  Makefile  Readme.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: byteparser.rs  constants.rs  lib.rs
tests/: call_relocation.rs  rodata_relocation.rs  tests.rs
tests/assembly/: const_rodata.rs  data_rel_ro_lddw.rs  input_loads.rs  panic_text_unlikely.rs  rodata_relocation.rs
xtask/: Cargo.toml
xtask/src/: main.rs
