[package]
name = "sbpf-linker"
edition = "2024"
version = "0.1.6"
authors = ["Claire Fan <claire@blueshift.gg>"]
description = "Upstream BPF linker for SBPF V0 programs"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/blueshift-gg/sbpf-linker"
repository = "https://github.com/blueshift-gg/sbpf-linker"
keywords = ["cli", "sbpf", "linker", "solana"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sbpf_linker"

[dependencies]
sbpf-assembler = "0.1.6"
sbpf-common = "0.1.6"
clap = { version = "4.5.13", features = ["derive"] }
either = { version = "1.15.0", features = ["serde"] }
object = "0.37.3"
bpf-linker = "0.10.0"
thiserror = "2.0.17"

tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-tree = "0.4"

tracing = "0.1"
anyhow = "1.0.100"

[[bin]]
name = "sbpf-linker"

