[package]
name = "sbpf-linker"
edition = "2024"
version = "0.1.8"
authors = ["Claire Fan <claire@blueshift.gg>"]
description = "Upstream BPF linker for SBPF V0 programs"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/blueshift-gg/sbpf-linker"
repository = "https://github.com/blueshift-gg/sbpf-linker"
keywords = ["cli", "sbpf", "linker", "solana"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sbpf_linker"

[dependencies]
sbpf-assembler = "0.1.8"
sbpf-common = "0.1.8"
clap = { workspace = true }
either = { version = "1.15.0", features = ["serde"] }
object = "0.37.3"
bpf-linker = { version = "0.10.1", default-features = false }
thiserror = "2.0.17"

tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-tree = "0.4"

tracing = "0.1"
anyhow = { workspace = true }

[[bin]]
name = "sbpf-linker"

[workspace]
members = ["xtask"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
walkdir = "2.5.0"


[workspace.package]
edition = "2024"

[features]
default = ["bpf-linker/default"]
upstream-gallery-21 = ["bpf-linker/llvm-21"]
